--- a/core/themes/lioa/templates/page.html.twig
+++ b/core/themes/lioa/templates/page.html.twig
@@ -41,10 +41,14 @@
 </section>
 <footer aria-label="Site footer" class="footer" id="footer" role="contentinfo">
    <div class="footer--top">
-     {{ page.footer_top }}
+     <div class="footer-with">
+      {{ page.footer_top }}
+     </div>
    </div>
    <div class="footer--bottom">
-       {{ page.footer_bottom }}
+   <div class="footer-with">
+      {{ page.footer_bottom }}
+     </div>   
    </div>
 </footer>
 </div>
