--- a/core/themes/lioa/css/style.css
+++ b/core/themes/lioa/css/style.css
@@ -34,6 +34,7 @@ body{
     width: 1200px;
     margin: auto;
     margin-top: 18px;
+    padding: 0 15px;
 }
 .main .content_experience{
     width: 1200px;
