--- a/core/themes/lioa/templates/page.html.twig
+++ b/core/themes/lioa/templates/page.html.twig
@@ -28,6 +28,15 @@
     <div aria-label="Site main content" class="content" id="content" role="main">
       {{ page.content }}
     </div>
+    <div class="news" id="news">
+      <div class="news_left" id="news_left" role="main">
+        {{ page.news_left }}
+      </div>
+      <div class="news_right" id="news_right" role="main">
+        {{ page.news_right }}
+      </div>
+    </div>
+    
     <div class="content_experience-main">
        <div class="content_experience" id="content_experience">
         {{ page.content_experience }}
