--- a/core/themes/lioa/templates/page.html.twig
+++ b/core/themes/lioa/templates/page.html.twig
@@ -5,6 +5,7 @@
     </div>
   </div>
   <header aria-label="Site header" class="header" id="header" role="banner">
+    <div class="header--main">    
      <div class="header--branding">
         {{ page.header_logo }}
      </div>
@@ -14,6 +15,7 @@
      <div class="header--search">
         {{ page.header_search }}
      </div>  
+    </div>
   </header>
   <section class="breadcrumb" id="breadcrumb" role="complementary">
     <div class="breadcrumb-with">
