--- a/core/themes/lioa/css/home.css
+++ b/core/themes/lioa/css/home.css
@@ -13,7 +13,7 @@ body {
 
 img {
     vertical-align: middle;
-    height: 410px;
+    height: 500px;
 }
 
 /* Slideshow container */
@@ -60,33 +60,28 @@ img {
     left: 70px;
     width: 50%;
 }
+
 .text_content {
     color: #00000087;
 }
+
 strong {
-        font-size: 30px;
-}
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+    font-size: 30px;
 }
 
 /* The dots/bullets/indicators */
 .main_dot {
     text-align: center;
     position: relative;
-    top: -100px
+    top: -125px
 }
+
 .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #f3f3f36e;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -121,4 +116,44 @@ strong {
     .text {
         font-size: 11px
     }
+}
+
+/* // Menu category */
+
+
+a {
+    text-decoration: none;
+}
+button{
+        font-size: 15px;
+        color: #0000008f;
+}
+.category_menu nav>ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.category_menu nav>ul li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.category_menu nav>ul li a {
+    display: block;
+    width: 114px;
+    padding: 1px 11px;
+    font-family: tahoma;
+    line-height: 16px;
+    padding-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    border-right: 3px solid rgb(224, 224, 224);
+    padding-bottom: 13px;
+    display: inline-block;
+    height: 73px;
+    text-transform: uppercase;
+    color: white;
+    font-weight: normal;
 }
