--- a/core/themes/lioa/css/home.css
+++ b/core/themes/lioa/css/home.css
@@ -1,34 +1,38 @@
-.language_icon > ul {
+.language_icon>ul {
     display: flex;
 }
-.language_icon > ul > li {
+
+.language_icon>ul>li {
     margin: 0 5px;
 }
-.language_icon > ul > li > a{
+
+.language_icon>ul>li>a {
     display: block;
 }
-.language_icon > ul > li > a > img{
+
+.language_icon>ul>li>a>img {
     width: 100%;
     height: 18px;
 }
- /* ============================logo=========================== */
- .header--branding img{
+
+/* ============================logo=========================== */
+.header--branding img {
     height: 50px;
     max-height: 60px;
- }
+}
 
 
-  /* ============================menu=========================== */
- .header--menu-list nav >ul {
+/* ============================menu=========================== */
+.header--menu-list nav>ul {
     display: flex;
 }
 
-.header--menu-list nav >ul>li {
+.header--menu-list nav>ul>li {
     margin: 0 2px;
     position: relative;
 }
 
-.header--menu-list nav >ul>li>a {
+.header--menu-list nav>ul>li>a {
     text-transform: uppercase;
     font-size: 13px;
     color: #2D3E52;
@@ -40,7 +44,8 @@
     text-shadow: none;
     position: relative;
 }
-.header--menu-list nav >ul>li>a:before {
+
+.header--menu-list nav>ul>li>a:before {
     display: block;
     content: "";
     background: #F56450;
@@ -49,14 +54,16 @@
     opacity: 0;
     transition: all 0.3s ease-in-out;
 }
-.header--menu-list nav >ul>li>a:hover {
- color: #F56450;
-}
-.header--menu-list nav >ul>li>a:hover:before {
-    opacity: 1;
-} 
 
-.header--menu-list nav >ul>li ul{
+.header--menu-list nav>ul>li>a:hover {
+    color: #F56450;
+}
+
+.header--menu-list nav>ul>li>a:hover:before {
+    opacity: 1;
+}
+
+.header--menu-list nav>ul>li ul {
     position: absolute;
     margin: 0;
     top: 111px;
@@ -68,29 +75,35 @@
     opacity: 0;
     transition: all 0.3s ease-in-out;
 }
+
 .header--menu-list nav>ul>li ul li {
     border-bottom: 1px solid #EFF4F7;
     position: relative;
 }
-.header--menu-list nav>ul>li ul li a{
+
+.header--menu-list nav>ul>li ul li a {
     display: block;
     color: #313131;
     line-height: 30px;
     padding: 0 13px;
     font-size: 14px;
 }
-.header--menu-list nav>ul>li ul li a:hover{
+
+.header--menu-list nav>ul>li ul li a:hover {
     color: #a3a2a2;
-    background: rgba(239, 244, 247,0.5);
+    background: rgba(239, 244, 247, 0.5);
 }
-.header--menu-list nav>ul>li ul li .show-menu-chilren{
+
+.header--menu-list nav>ul>li ul li .show-menu-chilren {
     color: #a3a2a2;
-    background: rgba(239, 244, 247,0.5);
+    background: rgba(239, 244, 247, 0.5);
 }
-.header--menu-list nav>ul>li:hover ul{
+
+.header--menu-list nav>ul>li:hover ul {
     opacity: 1;
     top: 69px;
 }
+
 .mySlides {
     display: none
 }
@@ -203,17 +216,19 @@ strong {
 }
 
 /* // Menu category */
-*{
+* {
     box-sizing: border-box;
 }
 
 a {
     text-decoration: none;
 }
-button{
+
+button {
     font-size: 15px;
     color: #0000008f;
 }
+
 .category_menu nav>ul {
     display: flex;
     margin: 0;
@@ -242,4 +257,102 @@ button{
     text-transform: uppercase;
     color: white;
     font-weight: normal;
+}
+
+/* content_experience */
+.td27{
+    color: rgb(255, 255, 255);
+    font-family: rbold, "Raleway", "Open sans", "myriad pro", tahoma;
+    padding-left: 112px;
+    margin-top: 11px;
+    font-size: 26px;
+    margin-bottom: 50px;
+    text-transform: none;
+    margin-left: 13px;
+    padding-top: 15px;
+}
+
+.td27 span{
+    position: absolute;
+    font-size: 91px;
+    top: -59px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: rgba(229, 89, 30, 0);
+    line-height: 130px;
+    text-align: center;
+    color: rgb(58, 56, 56);
+    margin-left: -113px;
+    font-family: gothic;
+    text-shadow: 2px 0 1px black;
+    font-family: gothic;
+}
+
+.year h3 {
+    color: white;
+    font-family: rbold, "Raleway", "Open sans", "myriad pro", tahoma;
+    font-size: 15px;
+    margin-top: 3px;
+    margin-right: -14px;
+    padding-right: 0;
+    text-align: right;
+    width: 8.33333333%;
+}
+
+.content_ex p {
+    line-height: 22px;
+    font-size: 13px;
+    font-family: tahoma;
+    color: rgb(255, 244, 244);
+    margin: 0 0 10px;
+    position: relative;
+    left: 118px;
+    top: -34px;
+    width: 1090px;
+}
+
+a.xt {
+    color: white;
+    background: #414141;
+    padding: 5px 10px;
+    position: relative;
+    float: right;
+    margin-bottom: 20px;
+    padding-left: 19px;
+    padding-right: 17px;
+    font-size: 12px;
+}
+
+.content_nation_main {
+    background: #e9e9e9;
+    padding-top: 1px;
+}
+
+.td36 span {
+    position: absolute;
+    font-size: 91px;
+    top: -80px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: rgba(229, 89, 30, 0);
+    line-height: 130px;
+    text-align: center;
+    color: rgb(58, 56, 56);
+    margin-left: -113px;
+    font-family: gothic;
+    text-shadow: 2px 0 1px black;
+    font-family: gothic;
+}
+.td36 {
+    color: #414141;
+    font-family: rbold, "Raleway", "Open sans", "myriad pro", tahoma;
+    padding-left: 112px;
+    margin-top: 11px;
+    font-size: 26px;
+    margin-bottom: 50px;
+    text-transform: none;
+    margin-left: 13px;
+    padding-top: 15px;
 }
