--- a/core/themes/lioa/css/home.css
+++ b/core/themes/lioa/css/home.css
@@ -64,8 +64,8 @@
     background-color: #FFF;
     min-width: 200px;
     z-index: 1;
-    border-radius: 5px;
     opacity: 0;
+    border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
 .header--menu-list nav>ul>li ul li {
@@ -87,7 +87,7 @@
     color: #a3a2a2;
     background: rgba(239, 244, 247,0.5);
 }
-.header--menu-list nav>ul>li:hover ul{
+.header--menu-list nav>ul>li:hover > ul{
     opacity: 1;
     top: 69px;
 }
@@ -95,9 +95,9 @@
     display: none
 }
 
-img {
+.slider img {
     vertical-align: middle;
-    height: 410px;
+    height: 500px;
 }
 
 /* Slideshow container */
@@ -206,3 +206,66 @@ strong {
         font-size: 11px
     }
 }
+
+
+/* -----------------------------tin tức-------------------------------- */
+
+.content h2{
+    border-bottom: 1px solid gray;
+    font-size: 25px;
+    padding: 10px 0;
+    font-weight: 500;
+    position: relative;
+}
+.content h2::before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 50px;
+    z-index: 111;
+    height: 2px;
+    width: 106px;
+    background: #F56450;
+}
+.tin-tuc {
+    height: 290px;
+}
+.tin-tuc .views-view-grid .views-row .views-field-field-image {
+   float : left;
+}
+.tin-tuc .views-view-grid .views-row {
+   display: flex;
+}
+.tin-tuc .views-view-grid .views-row .views-field-field-image img {
+   padding-right : 15px;
+    height: 190px;
+    width: 265px;
+}
+.tin-tuc .views-view-grid .views-row .views-col {
+   padding : 0 15px;
+}
+.tin-tuc .views-view-grid .views-row .views-field-title > span a  {
+    color: #414141;
+    font-family: "Open sans","myriad pro",tahoma;
+    text-transform: none;
+    font-size: 14px;
+    padding: 0 0 10px 0;
+    display: block;
+    font-weight: bold;
+ }
+ .tin-tuc .views-view-grid .views-row .views-field-body > span p{
+    font-size: 14px;
+    line-height: 28px;
+    color: #666666;
+ }
+ .tin-tuc .views-view-grid .views-row  .views-field-view-node > span a {
+    padding: 10px 15px;
+    border: 1px solid #F56450;
+    border-radius: 5px;
+    color: #F56450;
+    transition: all 0.2s ease-in-out;
+ }
+ .tin-tuc .views-view-grid .views-row  .views-field-view-node > span a:hover{
+    color: #ffffff;
+    background: #F56450;
+ }
