--- a/core/themes/lioa/css/style.css
+++ b/core/themes/lioa/css/style.css
@@ -62,7 +62,7 @@ a {
     margin: auto;
     margin-top: -110px;
     position: relative;
-    z-index: 500;
+    z-index: 1;
 }
 .main .content{
     width: 1200px;
@@ -117,6 +117,9 @@ a {
 .footer .footer-with {
     width: 1200px;
     margin: auto;
+}
+.footer .footer-with>div{
+    display: flex;
 }
 .footer .footer--top{
     color: #BCC1C5;
