--- a/core/themes/lioa/css/home.css
+++ b/core/themes/lioa/css/home.css
@@ -455,7 +455,26 @@ a.xt {
 .footer .footer-with>div nav {
     padding-right: 45px;
 }
-#block-lienhe {
+.footer .footer-with .content-lien-he{
     width: 205px;
     padding-right: 45px;
+}
+.footer .footer-with nav >ul{
+    display: flex;
+    width: 330px;
+}
+.footer .footer-with nav >ul > li {
+    width: 50%;
+}
+.footer .footer-with nav >ul > li > ul {
+    margin-left: 30px;
+}
+.footer .footer-with nav >ul > li > ul >li {
+    list-style: square;
+}
+.footer .footer-with nav >ul > li > ul > li > ul {
+    margin-left: 16px;
+}
+.footer .footer-with nav >ul > li > ul > li > ul > li {
+    list-style-type: decimal;
 }
