--- a/modules/custom_module/css/custom_module.css
+++ b/modules/custom_module/css/custom_module.css
@@ -1,8 +1,4 @@
 /* CSS cho các thành phần của form */
-.list_user_form {
-    background-color: #007bff;
-    width: 500px;
-    margin: auto;
-}
-  
-  
+.list-user-form{
+    background-color: red
+  }
