--- a/themes/lioa/css/layout/layout-views-grid-company.css
+++ b/themes/lioa/css/layout/layout-views-grid-company.css
@@ -1,23 +1,23 @@
-.flex-gioi-thieu {
+.flex-company {
     display: flex;
     flex-wrap: wrap;
     padding: 0 15px;
 }
 
-.flex-gioi-thieu .flex-wrap-width {
+.flex-company .flex-wrap-width {
     width: 50%;
 }
-.views-view-grid__gioi-thieu {
+.views-view-grid__company {
     margin-bottom: 150px;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu-nam {
+.views-view-grid__company .header-item-company-nam {
     float: left;
     color: #F56450;
     font-size: 25px;
     font-weight: bold;
     padding-right: 10px;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu {
+.views-view-grid__company .header-item-company {
     padding: 10px 0;
     font-size: 14px;
     font-weight: bold;
@@ -25,18 +25,18 @@
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu-img {
+.views-view-grid__company .header-item-company-img {
     float: left;
     padding: 0 10px;
     margin-right: 15px;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu-img img {
+.views-view-grid__company .header-item-company-img img {
     border: 1px solid #ccc;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu-body {
+.views-view-grid__company .header-item-company-body {
     padding-right: 50px;
 }
-.views-view-grid__gioi-thieu .header-item-gioi-thieu-body p {
+.views-view-grid__company .header-item-company-body p {
     font-size: 12px;
     line-height: 20px;
 }
