--- a/themes/lioa/css/product.css
+++ b/themes/lioa/css/product.css
@@ -7,6 +7,7 @@
 .product-view .views-row .views-col img{
     width: 100%;
     height: 250px;
+    object-fit: contain;
 }
 .product-view .views-row .views-col .views-field-title {
     text-align: center;
