--- a/themes/lioa/templates/page.html.twig
+++ b/themes/lioa/templates/page.html.twig
@@ -1,3 +1,55 @@
+{#
+/**
+ * @file
+ * Olivero's theme implementation to display a single page.
+ *
+ * The doctype, html, head and body tags are not in this template. Instead they
+ * can be found in the html.html.twig template normally located in the
+ * core/modules/system directory.
+ *
+ * Available variables:
+ *
+ * General utility variables:
+ * - base_path: The base URL path of the Drupal installation. Will usually be
+ *   "/" unless you have installed Drupal in a sub-directory.
+ * - is_front: A flag indicating if the current page is the front page.
+ * - logged_in: A flag indicating if the user is registered and signed in.
+ * - is_admin: A flag indicating if the user has permission to access
+ *   administration pages.
+ *
+ * Site identity:
+ * - front_page: The URL of the front page. Use this instead of base_path when
+ *   linking to the front page. This includes the language domain or prefix.
+ *
+ * Page content (in order of occurrence in the default page.html.twig):
+ * - node: Fully loaded node, if there is an automatically-loaded node
+ *   associated with the page and the node ID is the second argument in the
+ *   page's path (e.g. node/12345 and node/12345/revisions, but not
+ *   comment/reply/12345).
+ *
+ * Regions:
+ * - page.header_language: Items for the language region.
+ * - page.header_logo: Items for the logo region.
+ * - page.header_menu: Items for the menu region.
+ * - page.header_search: Items for the search region.
+ * - page.content: The main content of the current page.
+ * - page.sidebar: Items for the first sidebar.
+ * - page.category_menu: Items for the category menu region.
+ * - page.content_left_product: Items for the content left product region.
+ * - page.content_right_product: Items for the content right product region.
+ * - page.news_left: Items for the news left region.
+ * - page.news_right: Items for the news right region.
+ * - page.content_experience: Items for the content expericence region.
+ * - page.content_nation: Items for the content nation region.
+ * - page.breadcrumb: Items for the breadcrumb region.
+ * - page.footer_top: Items for the footer top region.
+  * - page.footer_bottom: Items for the footer bottom region.
+ *
+ * @see template_preprocess_page()
+ * @see html.html.twig
+ */
+#}
+
 <div class="embrace">
       {{ page.header_language }} 
   <header aria-label="Site header" class="header" id="header" role="banner">
